...
        viewController.viewModel.stepper
            .sink { [weak self] event in
                self?.finish()
            }
            .store(in: &subscription)
        
        viewController.view.accessibilityIdentifier = "DashboardViewController"
        navigationController.setViewControllers([viewController], animated: false)
    }
}

// Uncomment for navigation bar
//extension DashboardCoordinator: CoordinatorFinishDelegate {
...
