...
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="vIe-Id-few">
                                        <rect key="frame" x="0.0" y="478" width="354" height="230"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TbB-v2-MKf" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                                <rect key="frame" x="0.0" y="0.0" width="354" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="nicknameTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="hmD-Em-wk9"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" textContentType="name"/>
                                                <userDefinedRuntimeAttributes>
...
                                                        <color key="value" name="primary"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U3a-SR-vGS" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                                <rect key="frame" x="0.0" y="60" width="354" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="EGH-T5-Y6Y"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                                                <userDefinedRuntimeAttributes>
...
                                                        <color key="value" name="primary"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R9g-6t-x4e" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextFiel
                                                <rect key="frame" x="0.0" y="120" width="354" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="9Lf-gD-m3D"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                <userDefinedRuntimeAttributes>
...
                                                        <color key="value" name="primary"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="atb-Wm-aee" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextFiel
                                                <rect key="frame" x="0.0" y="180" width="354" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="repeatPasswordTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="EqL-Lc-CpQ"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                <userDefinedRuntimeAttributes>
...
                                            <constraint firstAttribute="trailing" secondItem="TbB-v2-MKf" secondAttribute="trailing" id="heD-Kf-KLm"/>
                                            <constraint firstAttribute="trailing" secondItem="R9g-6t-x4e" secondAttribute="trailing" id="mQ1-Jb-0m9"/>
                                        </constraints>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xpd-7S-rfO" customClass="PrimaryButton" customModule="GoFitApp" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="728" width="354" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signUpButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="tDj-uY-fTZ"/>
                                        </constraints>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Sign up"/>
                                        <connections>
...
