...
                                    </imageView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="yNS-jE-YkE">
                                        <rect key="frame" x="0.0" y="327" width="354" height="110"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gQu-O2-jA6" customClass="PrimaryButton" customModule="GoFitApp" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="0.0" width="354" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="getStartedButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="Bse-zq-14h"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="17"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Get started"/>
...
